--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     <title>Recipe App</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="logo.png" />
+    <link rel="icon" type="image/x-icon" href="imgs/logo.png" />
   </head>
   <body>
     <nav>
