adding homepage logo

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   </head>
   <body>
     <nav>
-      <button class="show-modal">Your Favorites</button>
-      <span class="light-dark-mode">
-        <i class="fa-sharp fa-solid fa-sun"></i>
-      </span>
+      <a href="index.html"><img src="imgs/logo.png" alt="" /></a>
+      <div class="btn-container">
+        <button class="show-modal">Your Favorites</button>
+        <span class="light-dark-mode">
+          <i class="fa-sharp fa-solid fa-sun"></i>
+        </span>
+      </div>
     </nav>
     <section>
       <div class="container initial">
